# DirectorySizer

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
directory_sizer/: __init__.py  app.py  base_object.py  file.py  folder.py
tests/unit_tests/: test_directory_sizer.py
