[tool.poetry]
name = "directorysizer"
version = "0.1.0"
description = "A python project that scans the given directory and returns the size of the child folders and files"
authors = ["CaptinBata"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-print = "^4.0.0"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
pre-commit = "^2.9.3"
pytest-env = "^0.6.2"
pytest-pythonpath = "^0.7.3"
bandit = "^1.7.0"
safety = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
